--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -60,7 +60,7 @@ A second entry exists to run the SPA during development, which has an equivalent
 
 ### React Code
 
-The SPA's code now uses React as a web framework, to enable better features during coding of views. The SPA renders a tree of views which leads to concurrent API requests. The SPA must synchronise the triggering of both token renewal and user re-authentication when tokens expire.
+The SPA's code now uses React as a web framework, to enable richer coding options in areas like view development, navigation and code splitting. The SPA renders a tree of views which leads to concurrent API requests. The SPA must synchronise the triggering of both token renewal and user re-authentication when tokens expire.
 
 ```jsx
 return (
