--- a/public/posts/reactjs-codingkeypoints.mdx
+++ b/public/posts/reactjs-codingkeypoints.mdx
@@ -42,13 +42,26 @@ The final SPA uses the same HTML markup as earlier SPAs:
 
 ### Web Host
 
-During development I continue to use the webpack development server. For the final SPA I use additional settings to use a restrictive content security policy during development. I also run middleware to handle invalid paths outside of the React root location:
+During development I continue to use the webpack development server. For the final SPA I use additional security settings to use a restrictive content security policy during development:
 
 ```typescript
-const devServer: webpackDevServer.Configuration = {
+function getWebHostSecurityHeaders(): Headers {
 
-    ...
-    headers: [
+    const bffHost = (process.env.LOCALAPI === 'true') ?
+        'https://bfflocal.authsamples-dev.com:444' : 'https://bff.authsamples-dev.com';
+
+    let policy = "default-src 'none';";
+    policy += " script-src 'self';";
+    policy += ` connect-src 'self' ${bffHost};`;
+    policy += " child-src 'self';";
+    policy += " img-src 'self';";
+    policy += " style-src 'self';";
+    policy += " object-src 'none';";
+    policy += " frame-ancestors 'none';";
+    policy += " base-uri 'self';";
+    policy += " form-action 'self'";
+
+    return [
         {
             key: 'content-security-policy',
             value: policy,
@@ -73,27 +86,8 @@ const devServer: webpackDevServer.Configuration = {
             key: 'referrer-policy',
             value: 'same-origin',
         },
-    ],
-    setupMiddlewares: (middlewares: webpackDevServer.Middleware[]) => {
-
-        middlewares.unshift({
-            name: 'not-found',
-            path: '/',
-            middleware: (request: Request, response: Response, next: NextFunction) => {
-
-                const currentPath = request.path.toLowerCase();
-                if (currentPath.startsWith('/spa/') || currentPath === '/favicon.ico') {
-                    next();
-                    return;
-                }
-
-                response.redirect('/spa/');
-            },
-        });
-
-        return middlewares;
-    },
-};
+    ];
+}
 ```
 
 The project also contains an Express web host that you can find in the *deployments/docker/webhost* folder. You can use the Express host to test delivery of static content release builds to the browser. The Docker web host uses compression and writes response headers to enable browser caching. I say more about release behaviors at the end of this blog post.
