--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -429,7 +429,7 @@ const config: webpack.Configuration = {
 
 Once webpack has built files I use a simple file copy plugin to deploy other files to the *dist* folder. I then run the SPA with the same web files as a production user. Whenever I make changes to HTML, CSS or JavaScript files I get fast feedback in the browser.
 
-You could adapt this blog's SPAs to use an alternative web bundler. I currently prefer webpack over other bundlers, since it is a mature, open source solution that seems to have a strong consumer-focus when you run into deeper requirements.
+You could adapt this blog's SPAs to use an alternative web bundler. I currently prefer webpack over other bundlers, since it is a mature, open source solution that I find meets my deeper requirements and avoids blocking issues.
 
 ### Building Code: Compiler Settings
 
