--- a/public/posts/serverless-api-deployment.mdx
+++ b/public/posts/serverless-api-deployment.mdx
@@ -12,7 +12,7 @@ The API has a number of commands in its *package.json* file, which point to scri
 {
   "scripts": {
     "login": "sls login",
-    "lint": "npx eslint ./src ./webpack",
+    "lint": "eslint .",
     "start": "./start.sh",
     "testsetup": "./test/scripts/testsetup.sh",
     "test": "./test/scripts/test.sh",
