--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -286,30 +286,33 @@ fi
 My first build task checks code quality using the [typescript-eslint](https://github.com/typescript-eslint/typescript-eslint) library. The underlying [eslint](https://eslint.org/) library requires its own JavaScript configuration file. I import standard JavaScript and TypeScript rulesets as well as activating rules that reflect my coding preferences:
 
 ```javascript
-import eslint from '@eslint/js';
+import {defineConfig, globalIgnores} from 'eslint/config'
+import js from '@eslint/js';
 import tseslint from 'typescript-eslint';
 
-export default tseslint.config({
-    files: ['**/*.ts', '**/*.mjs'],
-    extends: [
-        eslint.configs.strict,
-        ...tseslint.configs.strict,
-    ],
-    rules: {
-        '@typescript-eslint/explicit-module-boundary-types': ['error', {
-            'allowArgumentsExplicitlyTypedAsAny': true,
-        }],
-        '@typescript-eslint/no-explicit-any': 'off',
-        '@typescript-eslint/no-extraneous-class': 'off',
-        'brace-style': ['error', '1tbs'],
-        'indent': 'error',
-        'max-len': ['error', { 'code': 120 }],
-        'no-multiple-empty-lines': ['error', {'max': 1}],
-        'no-trailing-spaces': 'error',
-        'quotes': ['error', 'single'],
-        'semi': 'error',
+export default defineConfig([
+    globalIgnores(['dist']),
+    {
+        files: ['**/*.ts'],
+        extends: [
+            js.configs.recommended,
+            tseslint.configs.strict,
+        ],
+        rules: {
+            'brace-style': ['error', '1tbs'],
+            'max-len': ['error', { 'code': 120 }],
+            'no-multiple-empty-lines': ['error', {'max': 1}],
+            'no-trailing-spaces': 'error',
+            'quotes': ['error', 'single', { 'avoidEscape': true }],
+            'semi': 'error',
+            '@typescript-eslint/no-explicit-any': 'off',
+            '@typescript-eslint/no-extraneous-class': 'off',
+            '@typescript-eslint/explicit-module-boundary-types': ['error', {
+                'allowArgumentsExplicitlyTypedAsAny': true,
+            }],
+        },
     },
-});
+]);
 ```
 
 This provides warnings, mostly about little things, that helps to keep code maintainable and consistent:
