--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -96,7 +96,7 @@ Earlier SPAs in this blog used hash-based routing. The final SPA instead uses Re
         <base href='/spa/'>
         <title>OAuth Demo App</title>
 
-        <link rel='stylesheet' href='bootstrap.min.css'>
+        <link rel='stylesheet' href='bootstrap.css'>
         <link rel='stylesheet' href='app.css'>
     </head>
     <body>
