Update Bootstrap stylesheet link in MDX file

--- a/public/posts/reactjs-codingkeypoints.mdx
+++ b/public/posts/reactjs-codingkeypoints.mdx
@@ -27,7 +27,7 @@ The final SPA uses the same HTML markup as earlier SPAs:
         <base href='/spa/'>
         <title>OAuth Demo App</title>
 
-        <link rel='stylesheet' href='bootstrap.min.css'>
+        <link rel='stylesheet' href='bootstrap.css'>
         <link rel='stylesheet' href='app.css'>
     </head>
     <body>
